🐛 FIX: Visibility of arrow at select input

--- a/04_BLOCK-LAYOUT_HOMEWORK/css/style.css
+++ b/04_BLOCK-LAYOUT_HOMEWORK/css/style.css
@@ -188,10 +188,9 @@ body {
 }
 
 select {
-    background: url(/img/arrow.svg) no-repeat right #ffffff;
+    background: url(../img/arrow.svg) no-repeat right #ffffff;
     -webkit-appearance: none;
     background-position-x: 95%;
-
 }
 
 .submit {
